cpu/makeInfo.txt
utnso@utnso:~/tp-2025-1c-apruebenOS/cpu$ make >> makeInfo.txt
mkdir -pv obj/utils/
mkdir: created directory 'obj/utils/'
gcc -g -Wall -DDEBUG -fdiagnostics-color=always -fPIC -c -o "obj/utils/utils.o" src/utils/utils.c -I./src -I/usr/local/include
gcc -g -Wall -DDEBUG -fdiagnostics-color=always -fPIC -c -o "obj/utils/serializacion.o" src/utils/serializacion.c -I./src -I/usr/local/include
gcc -g -Wall -DDEBUG -fdiagnostics-color=always -fPIC -c -o "obj/utils/sockets.o" src/utils/sockets.c -I./src -I/usr/local/include
mkdir -pv lib/
mkdir: created directory 'lib/'
ar rcs "lib/libutils.a" obj/utils/utils.o obj/utils/serializacion.o obj/utils/sockets.o
In file included from src/main.c:4:



src/../headers/mmu.h:25:9: error: conflicting types for ‘cargar_configuracion’; have ‘uint8_t(char *)’ {aka ‘unsigned char(char *)’}
   25 | uint8_t cargar_configuracion(char* path);
      |         ^~~~~~~~~~~~~~~~~~~~
In file included from src/../headers/mmu.h:4,
                 from src/main.c:4:
src/../headers/../../memoria/headers/init_memoria.h:42:5: note: previous declaration of ‘cargar_configuracion’ with type ‘int(char *)’
   42 | int cargar_configuracion(char* path); // carga cfg en strut cfg
      |     ^~~~~~~~~~~~~~~~~~~~
src/main.c: In function ‘main’:
src/main.c:29:9: error: redefinition of ‘numero_cpu’
   29 |     int numero_cpu = atoi(argv[1]);
      |         ^~~~~~~~~~
src/main.c:27:9: note: previous definition of ‘numero_cpu’ with type ‘int’
   27 |     int numero_cpu = atoi(argv[1]);
      |         ^~~~~~~~~~
make: *** [Makefile:88: obj/main.o] Error 1